Adding test comment

--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" media="all" href="style.css">
 </head> 
 <body> 
-
+<!-- Test Comment -->
     <div id="banner">
         <div id="header"><h1>Game Store</h1></div>
         <div id="userInfo">
