Updated images on all store pages

--- a/Front-End/cart.html
+++ b/Front-End/cart.html
@@ -1,16 +1,18 @@
 <html> 
 <head> 
 <title>Game Store</title> 
-<link rel="stylesheet" type="text/css" media="all" href="style.css">
+<link rel="stylesheet" type="text/css" media="all" href="store.css">
 </head> 
 <body> 
 
     <div id="banner">
-        <div id="header"><h1>Game Store</h1></div>
+        <div id="header">
+            <h1>Game Store</h1> 
+            <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
+        </div>
         <div id="userInfo">
             Enter Phone Number
             <img src="img/phone.png" alt="Phone" style="width:50px; margin:0"><br><br><br>
-            View Cart
         </div>
     </div>
 
