--- a/Front-End/consoles.html
+++ b/Front-End/consoles.html
@@ -3,6 +3,12 @@
 <title>Game Store</title> 
 <link rel="stylesheet" type="text/css" media="all" href="store.css">
 </head> 
+<style>
+    .expo{
+        width:35%;
+        height:auto;
+    }
+</style>
 <body> 
 
     <div id="banner">
@@ -20,66 +26,56 @@
 
     <div id="samples">
         <div class="expo">
-            <h2>Astro Bot</h2>
+            <h2>Playstation 5</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/astro-bot.png" alt="Game"></div>
+                <div><img src="img/consoles/ps5.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Black Ops 6</h2>
+            <h2>Playstation 5 Slim</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/bo6.png" alt="Game"></div>
+                <div><img src="img/consoles/ps5-slim.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Elden Ring</h2>
+            <h2>Xbox Series X</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/elden-ring.png" alt="Game"></div>
+                <div><img src="img/consoles/xbox-series-x.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Marvel's Spider Man 2</h2>
+            <h2>Xbox Series S</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/consoles/xbox-series-s.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Nintendo Switch</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/consoles/switch.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Nintendo Switch OLED</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/consoles/switch-oled.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
