--- a/Front-End/games.html
+++ b/Front-End/games.html
@@ -56,74 +56,74 @@
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Forza Horizon 5</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/forza.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>EA Madden 2025</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/madden.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Star Wars Outlaws</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/outlaws.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Assassins Creed Valhala</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/valhala.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Animal Crossing New Horizons</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/animal-crossing.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Mario Kart 8</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/mariokart.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Pokemon Legends Arceus</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/pokemon.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Super Smash Bro's Ultimate</h2>
             <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/games/smash-bros.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
