--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -4,7 +4,6 @@
 <link rel="stylesheet" type="text/css" media="all" href="style.css">
 </head> 
 <body> 
-<!-- Test Comment a -->
     <div id="banner">
         <div id="header"><h1>Game Store</h1></div>
         <div id="userInfo">
@@ -18,25 +17,25 @@
         <a href = "games.html" >
         <div class="expo">
             <h2>Games</h2>
-            <div><img src="img/game.png" alt="Game"></div>
+            <div><img src="img/games/elden-ring.png" alt="Game"></div>
         </div>
         </a>
         <a href = "consoles.html" >
         <div class="expo">
             <h2>Consoles</h2>
-            <div><img src="img/xbox_one.png" alt="Game"></div>
+            <div><img src="img/consoles/xbox-series-s.png" alt="Game"></div>
         </div>
         </a>
         <a href = "accessories.html" >
         <div class="expo">
             <h2>Accessories</h2>
-            <div><img src="img/controller.png" alt="Game"></div>
+            <div><img src="img/accessories/playstation-pink.png" alt="Game"></div>
         </div>
         </a>
         <a href = "merchandise.html" >
         <div class="expo">
             <h2>Merchandise</h2>
-            <div><img src="img/shirt.webp" alt="Game"></div>
+            <div><img src="img/merch/shirt.webp" alt="Game"></div>
         </div>
         </a>
     </div>
