--- a/Front-End/merchandise.html
+++ b/Front-End/merchandise.html
@@ -20,66 +20,38 @@
 
     <div id="samples">
         <div class="expo">
-            <h2>Astro Bot</h2>
+            <h2>Pokemon Cards</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/astro-bot.png" alt="Game"></div>
+                <div><img src="img/merch/pokemon.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Black Ops 6</h2>
+            <h2>Invincible Funko Pop</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/bo6.png" alt="Game"></div>
+                <div><img src="img/merch/funkopop.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Elden Ring</h2>
+            <h2>Kirby Plush</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/elden-ring.png" alt="Game"></div>
+                <div><img src="img/merch/plush.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Marvel's Spider Man 2</h2>
+            <h2>Legend of Zelda Shirt</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/merch/shirt.webp" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
