--- a/Front-End/accessories.html
+++ b/Front-End/accessories.html
@@ -3,6 +3,12 @@
 <title>Game Store</title> 
 <link rel="stylesheet" type="text/css" media="all" href="store.css">
 </head> 
+<style>
+    #samples{
+        margin-top: 1%;
+        margin-bottom: 0%;
+    }
+</style>
 <body> 
 
     <div id="banner">
@@ -18,68 +24,81 @@
         </div>
     </div>
 
+    <h1 style="clear:both; margin:0px;"><br><br><br>Playstation Controllers</h1>
+
     <div id="samples">
         <div class="expo">
-            <h2>Astro Bot</h2>
+            <h2>White Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/astro-bot.png" alt="Game"></div>
+                <div><img src="img/accessories/playstation-white.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Black Ops 6</h2>
+            <h2>Blue Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/bo6.png" alt="Game"></div>
+                <div><img src="img/accessories/playstation-blue.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Elden Ring</h2>
+            <h2>Camo Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/elden-ring.png" alt="Game"></div>
+                <div><img src="img/accessories/playstation-camo.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Marvel's Spider Man 2</h2>
+            <h2>Pink Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/accessories/playstation-pink.png" alt="Game"></div>
+                <div><img src="img/plus.png" alt="Game"></div>
+            </div>
+        </div>
+    </div>
+        <h1 style="clear:both; margin:0px;"><br>Xbox Controllers</h1>
+        <div id="samples">
+        <div class="expo">
+            <h2>Black Controller</h2>
+            <h3>$60.00</h3>
+            <div class="expoImg">
+                <div><img src="img/minus.png" alt="Game"></div>
+                <div><img src="img/accessories/xbox-black.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Blue Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/accessories/xbox-blue.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Green Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/accessories/xbox-green.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
         <div class="expo">
-            <h2>Xbox Game</h2>
+            <h2>Red Controller</h2>
+            <h3>$60.00</h3>
             <div class="expoImg">
                 <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
-                <div><img src="img/plus.png" alt="Game"></div>
-            </div>
-        </div>
-        <div class="expo">
-            <h2>Xbox Game</h2>
-            <div class="expoImg">
-                <div><img src="img/minus.png" alt="Game"></div>
-                <div><img src="img/games/Marvels-Spider-Man-2.png" alt="Game"></div>
+                <div><img src="img/accessories/xbox-red.png" alt="Game"></div>
                 <div><img src="img/plus.png" alt="Game"></div>
             </div>
         </div>
