Added icon for pages

--- a/Front-End/games.html
+++ b/Front-End/games.html
@@ -2,12 +2,13 @@
 <head> 
 <title>Game Store</title> 
 <link rel="stylesheet" type="text/css" media="all" href="store.css">
+<link rel="icon" type="image/x-icon" href="img/paw-print.png">
 </head> 
 <body> 
 
     <div id="banner">
         <div id="header">
-            <h1>Game Store</h1> 
+            <h1>Panther's Games</h1> 
             <a href = "main.html"><h3><img src="img/back-arrow.png" alt="Arrow">Back to Main Page</h3></a>
         </div>
         <div id="header"><h1>Games</h1></div>
