--- a/Front-End/main.html
+++ b/Front-End/main.html
@@ -2,10 +2,11 @@
 <head> 
 <title>Game Store</title> 
 <link rel="stylesheet" type="text/css" media="all" href="style.css">
+<link rel="icon" type="image/x-icon" href="img/paw-print.png">
 </head> 
 <body> 
     <div id="banner">
-        <div id="header"><h1>Game Store</h1></div>
+        <div id="header"><h1>Panther's Games</h1></div>
         <div id="userInfo">
             Enter Phone Number
             <img src="img/phone.png" alt="Phone" style="width:50px; margin:0"><br><br><br>
