--- a/Front-End/cart.html
+++ b/Front-End/cart.html
@@ -2,6 +2,7 @@
 <head> 
 <title>Game Store</title> 
 <link rel="stylesheet" type="text/css" media="all" href="store.css">
+<link rel="icon" type="image/x-icon" href="img/paw-print.png">
 </head> 
 <body> 
 
